--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "terser-webpack-plugin": "^5.3.14"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "martinez-polygon-clipping": "^0.7.4",
     "poly2tri": "^1.5.0",
     "polygon-clipping": "^0.15.7",
