--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsdoc": "^51.3.2",
     "eslint-plugin-prettier": "^5.5.0",
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.6.3",
