--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "format": "npx eslint --fix . && npx prettier --write \"**/*.html\" && npx prettier --write \"**/*.css\""
   },
   "dependencies": {
+    "ccapture.js": "^1.1.0",
     "lodash": "^4.17.21",
     "martinez-polygon-clipping": "^0.7.4",
     "nanobar": "^0.4.2",
     "poly2tri": "^1.5.0",
     "polygon-clipping": "^0.15.7",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "webm-writer": "^1.0.0"
   }
 }
