--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "globals": "^16.2.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.14"
+    "terser-webpack-plugin": "^5.3.14",
+    "webpack-cli": "^6.0.1"
   },
   "scripts": {
     "format": "npx eslint --fix . && npx prettier --write \"**/*.html\" && npx prettier --write \"**/*.css\""
