--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.14",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpackbar": "^7.0.0"
   },
   "scripts": {
     "format": "npx eslint --fix . && npx prettier --write \"**/*.html\" && npx prettier --write \"**/*.css\""
