--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "format": "npx eslint --fix . && npx prettier --write \"**/*.html\" && npx prettier --write \"**/*.css\""
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lint": "^6.8.5",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "ccapture.js": "^1.1.0",
+    "codemirror": "^6.0.2",
     "lodash": "^4.17.21",
     "martinez-polygon-clipping": "^0.7.4",
     "nanobar": "^0.4.2",
