--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "martinez-polygon-clipping": "^0.7.4",
     "nanobar": "^0.4.2",
+    "nouislider": "^15.8.1",
     "poly2tri": "^1.5.0",
     "polygon-clipping": "^0.15.7",
     "three": "^0.176.0",
