--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "format": "npx eslint --fix . && npx prettier --write \"**/*.html\" && npx prettier --write \"**/*.css\""
   },
   "dependencies": {
-    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/lint": "^6.8.5",
     "@codemirror/theme-one-dark": "^6.1.3",
     "ccapture.js": "^1.1.0",
     "codemirror": "^6.0.2",
     "is-odd": "^3.0.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "martinez-polygon-clipping": "^0.7.4",
     "nanobar": "^0.4.2",
